[gd_scene load_steps=2 format=3 uid="uid://bw6b3k013xohr"]

[ext_resource type="Script" path="res://menus/gameover.gd" id="1_epxh0"]

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_epxh0")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.788235)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 72
text = "GAME OVER"

[node name="ScoreLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.896286, 0.783525, 0.16099, 1)
text = "New High Score"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="RestarButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer/RestarButton" to="." method="_on_restar_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/MarginContainer/GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
